# MindExpo

./: .gitignore  Makefile  pyproject.toml
mindexpo/: main.py
mindexpo/database/: schemas.py
mindexpo/db/: crud.py  database.py  models.py  schemas.py
mindexpo/models/: blog_model.py  forcast_model.py
mindexpo/pages/: about_me.md
mindexpo/pages/md_files/: 23#leetcode.md  26-07-2023_Merge-Sorted-Array.md  about_me.md  ds_patterns.md  sliding_window_pattern.md
mindexpo/pages/templates/: about.html
mindexpo/routers/: blog_post.py  items.py  pages.py
mindexpo/static/: styles.css
