[tool.poetry]
name = "mindexpo"
version = "0.1.0"
description = ""
authors = ["Bikash Jaiswal <bikash.jaiswal@cerence.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
ruff = "^0.0.278"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
